--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  cached_network_image: ^3.2.3
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
+
 
 dev_dependencies:
   flutter_test:
